crates/ty_python_semantic/resources/mdtest/snapshots/assignment_diagnosti…_-_Subscript_assignment…_-_Unknown_key_for_all_…_(1c685d9d10678263).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---
---
mdtest name: assignment_diagnostics.md - Subscript assignment diagnostics - Unknown key for all elemens of a union
mdtest path: crates/ty_python_semantic/resources/mdtest/subscript/assignment_diagnostics.md
---

# Python source files

## mdtest_snippet.py

```
 1 | from typing import TypedDict
 2 | 
 3 | class Person(TypedDict):
 4 |     name: str
 5 | 
 6 | class Animal(TypedDict):
 7 |     name: str
 8 |     legs: int
 9 | 
10 | def _(being: Person | Animal) -> None:
11 |     being["surname"] = "unknown"  # error: [invalid-assignment]
```

# Diagnostics

```
error[invalid-assignment]: Method `__setitem__` of type `(key: Literal["name"], value: str, /) -> None` cannot be called with a key of type `Literal["surname"]` and a value of type `Literal["unknown"]` on object of type `Person | Animal`
  --> src/mdtest_snippet.py:11:5
   |
10 | def _(being: Person | Animal) -> None:
11 |     being["surname"] = "unknown"  # error: [invalid-assignment]
   |     ^^^^^
   |
info: rule `invalid-assignment` is enabled by default

```
